--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
 
         <main id="container">
             <section id="apply">
-                <input type="range">
+                <form action="" style="display: flex; gap: 10px;">
+                    <input type="color">
+                    <button>Apply color</button>
+                </form>
+                <form action=""><button>rainbow</button></form>
+                <form action=""><input type="number" id="chose" name="chose the range" max="64" min="16" step="16"
+                        value="16">
+                    <button>apply size</button>
+
+                </form>
+
+
                 <img src="./imgs/pngtree-red-glossy-button-png-image_908890-removebg-preview.png"
                     alt="button for reset ">
+
             </section>
             <section id="bord"></section>
         </main>
