--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
                     <input type="color">
                     <button>Apply color</button>
                 </form>
-                <form action=""><button>rainbow</button></form>
+
+                <form action="">
+                    <button>rainbow</button>
+
+                </form>
+                <form action="" id="formal"><button>eraser</button></form>
                 <form action=""><input type="number" id="chose" name="chose the range" max="64" min="16" step="1"
                         value="16">
                     <button>apply size</button>
