add some feature

--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 
                 </form>
                 <form action="" id="formal"><button>eraser</button></form>
-                <form action=""><input type="number" id="chose" name="chose the range" max="64" min="16" step="1"
+                <form action=""><input type="number" id="chose" name="chose the range" max="64" min="1" step="1"
                         value="16">
                     <button>apply size</button>
 
                 </form>
+                <form action="" id="Toggle"><button>Toggle</button></form>
+                <form action="" id="steal"><button>steal color</button></form>
+
 
 
                 <img src="./imgs/pngtree-red-glossy-button-png-image_908890-removebg-preview.png"
