--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
                 </form>
                 <form action="" id="formal"><button>eraser</button></form>
-                <form action=""><input type="number" id="chose" name="chose the range" max="64" min="1" step="1"
-                        value="16">
-                    <button>apply size</button>
+                <div class="size">
+                    <h2>16*16</h2>
+                    <input type="range" id="chose" name="chose the range" max="64" min="1" step="1" value="16">
+                </div>
 
-                </form>
                 <form action="" id="Toggle"><button>Toggle</button></form>
-                <form action="" id="steal"><button>steal color</button></form>
+
 
 
 
