--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="range" id="chose" name="chose the range" max="64" min="1" step="1" value="16">
                 </div>
 
-                <form action="" id="Toggle"><button>Toggle</button></form>
+                <form action="" id="Toggle"><button>Toggle border</button></form>
 
 
 
