--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                     <input type="range" id="chose" name="chose the range" max="64" min="1" step="1" value="16">
                 </div>
 
-                <form action="" id="Toggle"><button>Toggle border</button></form>
+                <button id="Toggle">Toggle border</button>
+
+                <form action="" style="display: flex; gap: 10px;" id="based"><input type="color" id="background">
+                    <button>background color</button>
+                </form>
+
 
 
 
